--- a/your-code/challenge-1.ipynb
+++ b/your-code/challenge-1.ipynb
@@ -105,7 +105,29 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "url = \"https://api.github.com\"\n",
+    "\n",
+    "import requests as req\n",
+    "\n",
+    "res = req.get(url)\n",
+    "res\n",
+    "\n",
+    "res.json()\n",
+    "\n",
+    "res.json()[\"\"]\n",
+    "\n",
+    "resp.keys()\n",
+    "\n",
+    "with open (\"pass.txt\", \"r\") as file:\n",
+    "\n",
+    "    pass = file.read()\n",
+    "\n",
+    "HEADER = {\"Authorization\": \"token\" + pass_}\n",
+    "\n",
+    "res = req.get(url, headers = HEADER)\n",
+    "res"
+   ]
   }
  ],
  "metadata": {
