--- a/your-code/challenge-1.ipynb
+++ b/your-code/challenge-1.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
-    "import requests"
+    "import requests as req"
    ]
   },
   {
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,25 +31,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#pip install python-dotenv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,10 +93,227 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open('../token.txt') as file:\n",
+    "    my_token = file.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "HEADER = {'Authorization': 'token ' + my_token } "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = 'https://api.github.com/repos/Ironhack-Data-Madrid-Octubre-2023/1.5-lab_vikings'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res = req.get(url, headers=HEADER)\n",
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['id', 'node_id', 'name', 'full_name', 'private', 'owner', 'html_url', 'description', 'fork', 'url', 'forks_url', 'keys_url', 'collaborators_url', 'teams_url', 'hooks_url', 'issue_events_url', 'events_url', 'assignees_url', 'branches_url', 'tags_url', 'blobs_url', 'git_tags_url', 'git_refs_url', 'trees_url', 'statuses_url', 'languages_url', 'stargazers_url', 'contributors_url', 'subscribers_url', 'subscription_url', 'commits_url', 'git_commits_url', 'comments_url', 'issue_comment_url', 'contents_url', 'compare_url', 'merges_url', 'archive_url', 'downloads_url', 'issues_url', 'pulls_url', 'milestones_url', 'notifications_url', 'labels_url', 'releases_url', 'deployments_url', 'created_at', 'updated_at', 'pushed_at', 'git_url', 'ssh_url', 'clone_url', 'svn_url', 'homepage', 'size', 'stargazers_count', 'watchers_count', 'language', 'has_issues', 'has_projects', 'has_downloads', 'has_wiki', 'has_pages', 'has_discussions', 'forks_count', 'mirror_url', 'archived', 'disabled', 'open_issues_count', 'license', 'allow_forking', 'is_template', 'web_commit_signoff_required', 'topics', 'visibility', 'forks', 'open_issues', 'watchers', 'default_branch', 'permissions', 'temp_clone_token', 'organization', 'network_count', 'subscribers_count'])"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res_api = res.json()\n",
+    "res_api.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "forks = res_api['forks_url']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res_forks = req.get(forks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fork_api = res_forks.json()\n",
+    "len(fork_api)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The language of Kohkitos_koh's fork indexed 0 is Python\n",
+      "The language of mariasanzr's fork indexed 1 is Python\n",
+      "The language of abelnperez's fork indexed 2 is Python\n",
+      "The language of BorjaSilla_borja's fork indexed 3 is Python\n",
+      "The language of alicialafuente's fork indexed 4 is Python\n",
+      "The language of Christelllameda's fork indexed 5 is Python\n",
+      "The language of karmelealonso's fork indexed 6 is Python\n",
+      "The language of NoeRoson's fork indexed 7 is Python\n",
+      "The language of SaraPazo's fork indexed 8 is Python\n",
+      "The language of Carolina-MH's fork indexed 9 is Python\n",
+      "The language of maluque's fork indexed 10 is Python\n",
+      "The language of Lidiavf1912's fork indexed 11 is Python\n",
+      "The language of anderfer's fork indexed 12 is Python\n",
+      "The language of AlvaroYague's fork indexed 13 is Python\n",
+      "The language of josegzr's fork indexed 14 is Python\n",
+      "The language of jvr0's fork indexed 15 is Python\n",
+      "The language of AlejandroCasna's fork indexed 16 is Python\n",
+      "The language of Matimengot's fork indexed 17 is Python\n",
+      "The language of Ankourii's fork indexed 18 is Python\n",
+      "The language of ClaraGallardo_Clara's fork indexed 19 is Python\n",
+      "The language of yaninafontana84's fork indexed 20 is Python\n",
+      "The language of illegalvoidundead's fork indexed 21 is Python\n",
+      "The language of cristianecarneiro's fork indexed 22 is Python\n",
+      "The language of arromeral's fork indexed 23 is Python\n",
+      "The language of charlieciordia's fork indexed 24 is Python\n",
+      "The language of Jacobomb's fork indexed 25 is Python\n",
+      "The language of jomariapc's fork indexed 26 is Python\n",
+      "The language of Blanca95_Blanca's fork indexed 27 is Python\n",
+      "The language of inesgcalvo's fork indexed 28 is Python\n",
+      "The language of LeoBulcsu's fork indexed 29 is Python\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(30):\n",
+    "    lang = fork_api[i]['language']\n",
+    "    user = fork_api[i]['full_name']\n",
+    "    user = user.replace('/1.5-lab_vikings', '')\n",
+    "    print(f\"The language of {user}'s fork indexed {i} is {lang}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Now, I will extract the link of the avatar picture and display it here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://avatars.githubusercontent.com/u/146709321?v=4'"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res_api['organization']['avatar_url']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"https://avatars.githubusercontent.com/u/146709321?v=4\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from IPython.display import Image\n",
+    "\n",
+    "url_imagen = res_api['organization']['avatar_url']\n",
+    "\n",
+    "Image(url = url_imagen)"
+   ]
   }
  ],
  "metadata": {
@@ -124,7 +332,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.5"
   },
   "toc": {
    "base_numbering": 1,
