Added challenge1 and challenge2

--- a/your-code/challenge-1.ipynb
+++ b/your-code/challenge-1.ipynb
@@ -1,55 +1,55 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "import requests"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Only if you're using your environmental variable eith the `.env` file, import/install the following modules. Otherwise it is not necessary:\n",
+    "Only forkf you're using your environmental variable eith the `.env` file, import/install the following modules. Otherwise it is not necessary:\n",
     "\n",
     "https://pypi.org/project/python-dotenv/"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "from dotenv import load_dotenv"
+    "from dotenv import load_dotenv\n",
+    "import requests"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: python-dotenv in c:\\users\\borja\\anaconda3\\lib\\site-packages (1.0.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
-    "#pip install python-dotenv"
+    "%pip install python-dotenv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,10 +102,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200 OK ironhack-datalabs/datamad1020-rev\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define the main lab repo and the API endpoint\n",
+    "main_repo = \"ironhack-datalabs/datamad1020-rev\"\n",
+    "api_url = f\"https://api.github.com/repos/{main_repo}/forks\"\n",
+    "\n",
+    "# Send a GET request to the GitHub API to retrieve the list of forks\n",
+    "response = requests.get(api_url)\n",
+    "\n",
+    "# Check if the request was successful\n",
+    "if response.status_code == 200:\n",
+    "    print(f\"200 OK {main_repo}\")\n",
+    "    forks = response.json()\n",
+    "\n",
+    "else:\n",
+    "    print(f\"Failed to retrieve forks from {main_repo}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "unique_languages = set()\n",
+    "\n",
+    "for fork in forks:\n",
+    "    fork_languages_url = fork['languages_url']\n",
+    "    languages_response = requests.get(fork_languages_url)\n",
+    "\n",
+    "    # Check if we got a 200, if so, append\n",
+    "    if languages_response.status_code == 200:\n",
+    "\n",
+    "        languages = languages_response.json() # Take the json\n",
+    "        unique_languages.update(languages.keys())\n",
+    "\n",
+    "    else:\n",
+    "        print(f\"Failed to get languages for fork {fork['full_name']}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Python', 'HTML', 'Jupyter Notebook']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "language_array = list(unique_languages) # Make a list \n",
+    "\n",
+    "language_array"
+   ]
   }
  ],
  "metadata": {
@@ -124,7 +191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.4"
   },
   "toc": {
    "base_numbering": 1,
