--- a/your-code/challenge-2.ipynb
+++ b/your-code/challenge-2.ipynb
@@ -23,32 +23,148 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "54ad9814",
+   "metadata": {},
+   "source": [
+    "### WE WILL CALCULATE THE NUMBER OF COMMITS IN THE FORKS OF `3.1-lab_intro_to_mysql`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "developing-printing",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code"
+    "import requests as req\n",
+    "\n",
+    "repository = \"Ironhack-Data-Madrid-Octubre-2023/3.1-lab_intro_to_mysql\"\n",
+    "api_url = f\"https://api.github.com/repos/{repository}\"\n",
+    "commit_count = 0  # Initialize the total commit count\n",
+    "\n",
+    "with open('../pat.txt', 'r') as file:\n",
+    "    pat = file.read().strip()  # Strip any leading/trailing whitespace\n",
+    "\n",
+    "HEADER = {'Authorization': 'token ' + pat}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "creative-stable",
+   "id": "e9d18de4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Example: print(variable[:10]) "
+    "res = req.get(api_url, headers=HEADER) \n",
+    "res"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ongoing-taylor",
+   "execution_count": 3,
+   "id": "f7d87893",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['id', 'node_id', 'name', 'full_name', 'private', 'owner', 'html_url', 'description', 'fork', 'url', 'forks_url', 'keys_url', 'collaborators_url', 'teams_url', 'hooks_url', 'issue_events_url', 'events_url', 'assignees_url', 'branches_url', 'tags_url', 'blobs_url', 'git_tags_url', 'git_refs_url', 'trees_url', 'statuses_url', 'languages_url', 'stargazers_url', 'contributors_url', 'subscribers_url', 'subscription_url', 'commits_url', 'git_commits_url', 'comments_url', 'issue_comment_url', 'contents_url', 'compare_url', 'merges_url', 'archive_url', 'downloads_url', 'issues_url', 'pulls_url', 'milestones_url', 'notifications_url', 'labels_url', 'releases_url', 'deployments_url', 'created_at', 'updated_at', 'pushed_at', 'git_url', 'ssh_url', 'clone_url', 'svn_url', 'homepage', 'size', 'stargazers_count', 'watchers_count', 'language', 'has_issues', 'has_projects', 'has_downloads', 'has_wiki', 'has_pages', 'has_discussions', 'forks_count', 'mirror_url', 'archived', 'disabled', 'open_issues_count', 'license', 'allow_forking', 'is_template', 'web_commit_signoff_required', 'topics', 'visibility', 'forks', 'open_issues', 'watchers', 'default_branch', 'permissions', 'temp_clone_token', 'organization', 'network_count', 'subscribers_count'])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resp = res.json()\n",
+    "res.json().keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "2e8e0598",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res = req.get(resp[\"forks_url\"], headers=HEADER) # Access forks_url\n",
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "01535328",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "forks = res.json()\n",
+    "len(forks) # This would be the amount of forks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "6ccf95a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There is a total 100 commits in the forks of the repo: Ironhack-Data-Madrid-Octubre-2023/3.1-lab_intro_to_mysql\n"
+     ]
+    }
+   ],
+   "source": [
+    "commits = 0 # Initialize a counter\n",
+    "\n",
+    "for i in range(len(forks)):\n",
+    "\n",
+    "    url_e = forks[i][\"events_url\"]\n",
+    "    ans = req.get(url_e, headers=HEADER).json()\n",
+    "\n",
+    "    for i in range(len(ans)): # Iterate through all the forks      \n",
+    "        if \"commits\" in ans[i][\"payload\"].keys():\n",
+    "            commits +=1\n",
+    "\n",
+    "print(f\"There is a total {commits} commits in the forks of the repo: {repository}\")"
+   ]
   }
  ],
  "metadata": {
@@ -67,7 +183,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.4"
   },
   "toc": {
    "base_numbering": 1,
