--- a/your-code/challenge-3.ipynb
+++ b/your-code/challenge-3.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "toxic-trading",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "static-stopping",
    "metadata": {},
    "outputs": [],
@@ -65,17 +65,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "d38ebffa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = f'https://api.github.com/repos/ironhack-datalabs/scavenger'"
+    "url = f'https://api.github.com/repos/ironhack-datalabs/scavenger/contents?extension:scavengerhunt'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "5b2498d1",
    "metadata": {},
    "outputs": [
@@ -85,7 +85,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,30 +97,214 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "id": "28de9daa",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['id', 'node_id', 'name', 'full_name', 'private', 'owner', 'html_url', 'description', 'fork', 'url', 'forks_url', 'keys_url', 'collaborators_url', 'teams_url', 'hooks_url', 'issue_events_url', 'events_url', 'assignees_url', 'branches_url', 'tags_url', 'blobs_url', 'git_tags_url', 'git_refs_url', 'trees_url', 'statuses_url', 'languages_url', 'stargazers_url', 'contributors_url', 'subscribers_url', 'subscription_url', 'commits_url', 'git_commits_url', 'comments_url', 'issue_comment_url', 'contents_url', 'compare_url', 'merges_url', 'archive_url', 'downloads_url', 'issues_url', 'pulls_url', 'milestones_url', 'notifications_url', 'labels_url', 'releases_url', 'deployments_url', 'created_at', 'updated_at', 'pushed_at', 'git_url', 'ssh_url', 'clone_url', 'svn_url', 'homepage', 'size', 'stargazers_count', 'watchers_count', 'language', 'has_issues', 'has_projects', 'has_downloads', 'has_wiki', 'has_pages', 'has_discussions', 'forks_count', 'mirror_url', 'archived', 'disabled', 'open_issues_count', 'license', 'allow_forking', 'is_template', 'web_commit_signoff_required', 'topics', 'visibility', 'forks', 'open_issues', 'watchers', 'default_branch', 'permissions', 'temp_clone_token', 'organization', 'network_count', 'subscribers_count'])"
+       "{'name': '15024',\n",
+       " 'path': '15024',\n",
+       " 'sha': '2945e51c87ad5da893c954afcf092f06343bbb7d',\n",
+       " 'size': 0,\n",
+       " 'url': 'https://api.github.com/repos/ironhack-datalabs/scavenger/contents/15024?ref=master',\n",
+       " 'html_url': 'https://github.com/ironhack-datalabs/scavenger/tree/master/15024',\n",
+       " 'git_url': 'https://api.github.com/repos/ironhack-datalabs/scavenger/git/trees/2945e51c87ad5da893c954afcf092f06343bbb7d',\n",
+       " 'download_url': None,\n",
+       " 'type': 'dir',\n",
+       " '_links': {'self': 'https://api.github.com/repos/ironhack-datalabs/scavenger/contents/15024?ref=master',\n",
+       "  'git': 'https://api.github.com/repos/ironhack-datalabs/scavenger/git/trees/2945e51c87ad5da893c954afcf092f06343bbb7d',\n",
+       "  'html': 'https://github.com/ironhack-datalabs/scavenger/tree/master/15024'}}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "res_api = res.json()\n",
-    "res_api.keys()"
+    "res_api[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "f6521122",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "26"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(res_api)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "fb290e7a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output = {}\n",
+    "\n",
+    "for i in range(26):\n",
+    "    url = res_api[i]['_links']['html']\n",
+    "    name = res_api[i]['name']\n",
+    "    output[name] = url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "486c0ad7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'.gitignore': 'https://github.com/ironhack-datalabs/scavenger/blob/master/.gitignore',\n",
+       " '15024': 'https://github.com/ironhack-datalabs/scavenger/tree/master/15024',\n",
+       " '15534': 'https://github.com/ironhack-datalabs/scavenger/tree/master/15534',\n",
+       " '17020': 'https://github.com/ironhack-datalabs/scavenger/tree/master/17020',\n",
+       " '30351': 'https://github.com/ironhack-datalabs/scavenger/tree/master/30351',\n",
+       " '40303': 'https://github.com/ironhack-datalabs/scavenger/tree/master/40303',\n",
+       " '44639': 'https://github.com/ironhack-datalabs/scavenger/tree/master/44639',\n",
+       " '45525': 'https://github.com/ironhack-datalabs/scavenger/tree/master/45525',\n",
+       " '47222': 'https://github.com/ironhack-datalabs/scavenger/tree/master/47222',\n",
+       " '47830': 'https://github.com/ironhack-datalabs/scavenger/tree/master/47830',\n",
+       " '49418': 'https://github.com/ironhack-datalabs/scavenger/tree/master/49418',\n",
+       " '50896': 'https://github.com/ironhack-datalabs/scavenger/tree/master/50896',\n",
+       " '55417': 'https://github.com/ironhack-datalabs/scavenger/tree/master/55417',\n",
+       " '55685': 'https://github.com/ironhack-datalabs/scavenger/tree/master/55685',\n",
+       " '60224': 'https://github.com/ironhack-datalabs/scavenger/tree/master/60224',\n",
+       " '64880': 'https://github.com/ironhack-datalabs/scavenger/tree/master/64880',\n",
+       " '66032': 'https://github.com/ironhack-datalabs/scavenger/tree/master/66032',\n",
+       " '68848': 'https://github.com/ironhack-datalabs/scavenger/tree/master/68848',\n",
+       " '70751': 'https://github.com/ironhack-datalabs/scavenger/tree/master/70751',\n",
+       " '70985': 'https://github.com/ironhack-datalabs/scavenger/tree/master/70985',\n",
+       " '88596': 'https://github.com/ironhack-datalabs/scavenger/tree/master/88596',\n",
+       " '89046': 'https://github.com/ironhack-datalabs/scavenger/tree/master/89046',\n",
+       " '89338': 'https://github.com/ironhack-datalabs/scavenger/tree/master/89338',\n",
+       " '91701': 'https://github.com/ironhack-datalabs/scavenger/tree/master/91701',\n",
+       " '97881': 'https://github.com/ironhack-datalabs/scavenger/tree/master/97881',\n",
+       " '98750': 'https://github.com/ironhack-datalabs/scavenger/tree/master/98750'}"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "a67e8c69",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "too many values to unpack (expected 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\ingle\\_clase\\4.1-lab_api_scavengers_game\\your-code\\challenge-3.ipynb Cell 10\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/ingle/_clase/4.1-lab_api_scavengers_game/your-code/challenge-3.ipynb#X12sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfor\u001b[39;00m k,v \u001b[39min\u001b[39;00m output:\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/ingle/_clase/4.1-lab_api_scavengers_game/your-code/challenge-3.ipynb#X12sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     url \u001b[39m=\u001b[39m output[k]\n",
+      "\u001b[1;31mValueError\u001b[0m: too many values to unpack (expected 2)"
+     ]
+    }
+   ],
+   "source": [
+    "for k,v in output:\n",
+    "    url = output[k]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "e8dc7a5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'dict' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\ingle\\_clase\\4.1-lab_api_scavengers_game\\your-code\\challenge-3.ipynb Cell 11\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/ingle/_clase/4.1-lab_api_scavengers_game/your-code/challenge-3.ipynb#X20sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m output(\u001b[39m0\u001b[39m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'dict' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "959a76c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'.gitignore': 'https://github.com/ironhack-datalabs/scavenger/blob/master/.gitignore',\n",
+       " '15024': 'https://github.com/ironhack-datalabs/scavenger/tree/master/15024',\n",
+       " '15534': 'https://github.com/ironhack-datalabs/scavenger/tree/master/15534',\n",
+       " '17020': 'https://github.com/ironhack-datalabs/scavenger/tree/master/17020',\n",
+       " '30351': 'https://github.com/ironhack-datalabs/scavenger/tree/master/30351',\n",
+       " '40303': 'https://github.com/ironhack-datalabs/scavenger/tree/master/40303',\n",
+       " '44639': 'https://github.com/ironhack-datalabs/scavenger/tree/master/44639',\n",
+       " '45525': 'https://github.com/ironhack-datalabs/scavenger/tree/master/45525',\n",
+       " '47222': 'https://github.com/ironhack-datalabs/scavenger/tree/master/47222',\n",
+       " '47830': 'https://github.com/ironhack-datalabs/scavenger/tree/master/47830',\n",
+       " '49418': 'https://github.com/ironhack-datalabs/scavenger/tree/master/49418',\n",
+       " '50896': 'https://github.com/ironhack-datalabs/scavenger/tree/master/50896',\n",
+       " '55417': 'https://github.com/ironhack-datalabs/scavenger/tree/master/55417',\n",
+       " '55685': 'https://github.com/ironhack-datalabs/scavenger/tree/master/55685',\n",
+       " '60224': 'https://github.com/ironhack-datalabs/scavenger/tree/master/60224',\n",
+       " '64880': 'https://github.com/ironhack-datalabs/scavenger/tree/master/64880',\n",
+       " '66032': 'https://github.com/ironhack-datalabs/scavenger/tree/master/66032',\n",
+       " '68848': 'https://github.com/ironhack-datalabs/scavenger/tree/master/68848',\n",
+       " '70751': 'https://github.com/ironhack-datalabs/scavenger/tree/master/70751',\n",
+       " '70985': 'https://github.com/ironhack-datalabs/scavenger/tree/master/70985',\n",
+       " '88596': 'https://github.com/ironhack-datalabs/scavenger/tree/master/88596',\n",
+       " '89046': 'https://github.com/ironhack-datalabs/scavenger/tree/master/89046',\n",
+       " '89338': 'https://github.com/ironhack-datalabs/scavenger/tree/master/89338',\n",
+       " '91701': 'https://github.com/ironhack-datalabs/scavenger/tree/master/91701',\n",
+       " '97881': 'https://github.com/ironhack-datalabs/scavenger/tree/master/97881',\n",
+       " '98750': 'https://github.com/ironhack-datalabs/scavenger/tree/master/98750'}"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb290e7a",
+   "id": "409a7771",
    "metadata": {},
    "outputs": [],
    "source": []
