--- a/your-code/challenge-2.ipynb
+++ b/your-code/challenge-2.ipynb
@@ -29,7 +29,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code"
+    "import requests as req\n",
+    "import json\n",
+    "\n",
+    "# my token\n",
+    "from api import TOKEN\n",
+    "\n",
+    "import datetime"
    ]
   },
   {
@@ -37,23 +43,54 @@
    "execution_count": 2,
    "id": "creative-stable",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Example: print(variable[:10]) "
+    "url = 'https://api.github.com/repos/Ironhack-Data-Madrid-Octubre-2023/apuntes_clase/commits'\n",
+    "\n",
+    "week_ago = datetime.datetime.now() - datetime.timedelta(weeks=1)\n",
+    "\n",
+    "params = {'since': week_ago.isoformat()}\n",
+    "\n",
+    "headers = {'Authorization': f'token {TOKEN}'}\n",
+    "\n",
+    "res = req.get(url, params=params, headers=headers)\n",
+    "\n",
+    "res"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ongoing-taylor",
+   "execution_count": 3,
+   "id": "1896a63a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The muber of commits in the past week are 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'The muber of commits in the past week are {len(res.json())}')"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -67,7 +104,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.4"
   },
   "toc": {
    "base_numbering": 1,
